--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://satra.github.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+url: http://satra.cogitatum.org
+title: the little corner
+subtitle: connect
+author: Satrajit Ghosh
 simple_search: http://google.com/search
-description:
+description: Personal website/blog
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -58,7 +58,7 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.ht
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: satra
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
@@ -72,12 +72,12 @@ twitter_show_follower_count: false
 twitter_tweet_button: true
 
 # Google +1
-google_plus_one: false
+google_plus_one: true
 google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user:
+googleplus_user: satrajit.ghosh
 googleplus_hidden: false
 
 # Pinboard
@@ -89,7 +89,7 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
+disqus_short_name: satrajit
 disqus_show_comment_count: false
 
 # Google Analytics
