Add post notification

--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular-ui": "~0.4.0",
     "angular-audio": "~1.7.0",
     "angular-moment": "~0.10.3",
-    "moment": "~2.10.6"
+    "moment": "~2.10.6",
+    "notie": "*"
   }
 }
