--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "angular-moment": "~0.10.3",
     "moment": "~2.10.6",
     "notie": "*",
-    "cal-heatmap": "~3.5.3"
+    "cal-heatmap": "~3.5.3",
+    "dexie": "~1.2.0"
   }
 }
