Parametize default posts and set to 15

--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,9 @@
     "moment": "~2.10.6",
     "notie": "*",
     "cal-heatmap": "~3.5.3",
-    "dexie": "~1.2.0"
+    "dexie": "~1.2.0",
+    "swiper": "~3.2.7",
+    "vis": "~4.10.0",
+    "fullpage": "~2.7.6"
   }
 }
