--- a/blog/config.json
+++ b/blog/config.json
@@ -7,5 +7,5 @@
     "showSources": true,
     "cacheUnit": "days",
     "defaultPath": "posts",
-    "postsURL": "https://satra.databox.me/"
+    "postsURL": "https://satra.databox.me/posts/"
 }
